2013-06-01  Xavier Perseguers  <xavier@causal.ch>

	* [BUGFIX] Direct links to _downloads/ are broken
	* [BUGFIX] Remove doctype warnings in frames

2013-05-31  Xavier Perseguers  <xavier@causal.ch>

	* [BUGFIX] Cannot open image sources
	* [TASK] Rework of master TOC with recent changes in EXT:restdoc
	* [TASK] Add security checks (relates: #48597)
	* [WIP] #48597: Integrate a ReST editor
	* [TASK][DOC] Add a few indices
	* [TASK] Add support for general index

2013-05-30  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Render master TOC with interactive layout
	* [TASK] Detect outdated EXT:restdoc
	* [FEATURE] Basic use of EXT:restdoc to render documentation using JSON output

2013-05-29  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Add option to change format of the generated documentation
	* [TASK] Rewrite Documentation Viewer in Extbase

2013-05-28  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Unify error reporting as log files
	* [BUGFIX] #48599: Fatal error with TYPO3 6.2: Clipboard is not initialized

2013-05-28  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Raise version to 0.4.0
	* [TASK][DOC] Sphinx documentation viewer

2013-05-27  Xavier Perseguers  <xavier@causal.ch>

	* [TASK][DOC] Kickstart documentation as Sphinx project :)
	* [FEATURE] #48581: Allow extension's documentation to be rendered locally

2013-05-18  Xavier Perseguers  <xavier@causal.ch>

	* [FEATURE] #48340: Add detection of global sphinx

2013-05-17  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Show a FlashMessage when conf.py is temporarily modified for JSON output

2013-05-16  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] #48311: Official TYPO3 manuals cannot be compiled as JSON

2013-05-11  Xavier Perseguers  <xavier@causal.ch>

	* [FEATURE] #48110: Add command line utilities
	* [TASK] Use Fluid's StandaloneView instead of inline HTML

2013-05-10  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Raise version to 0.3.0